fix /sell-detail endpoint method
